--- a/templates/index.html
+++ b/templates/index.html
@@ -26,11 +26,11 @@
 	<style>
 	img {
 		margin-right:2%;
-		margin-left:2%;
+		margin-left:5%;
 		margin-top:5%;
 		margin-bottom:2%;
 		border-radius: 8px;
-		float: right;
+		float: left;
 
 		width:500;
 
