--- a/templates/index.html
+++ b/templates/index.html
@@ -30,11 +30,11 @@
   </div>
 <div class="container ">
 
-  <div class="row">
-    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 pt-4">
+  <div class="row pt-4">
+    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 ">
 		<canvas id="lineChart"></canvas>
     </div>
-    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 pt-4">
+    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 ">
 		<img src= "{{ url_for('static',filename='img/heart.gif') }}" alt="this slowpoke moves" width="500" height="333">
     </div>
 
