--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 
   <div class="row pt-4">
       <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 ">
-		<img class="img-responsive" src= "{{ url_for('static',filename='img/heart.gif') }}" alt="image">
+		<img src= "{{ url_for('static',filename='img/heart.gif') }}" alt="this slowpoke moves" width="500" height="333">
     </div>
     <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 ">
 		<canvas id="lineChart"></canvas>
