--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
 
   <div class="text-center pt-5">
-      <div class="col">
+    <div class="col">
       <h1 style="color:#2962FF;">CONNECTED HEALTH</h1>
     </div>
    
@@ -107,13 +107,15 @@ var config = {
 					refresh: 100,
 					delay: 2000,
 					onRefresh: onRefresh
-				}
+				},
+				gridLines: {color: "#171616", zeroLineColor: "#171616" }
 			}],
 			yAxes: [{
 				scaleLabel: {
 					display: true,
 					labelString: 'value'
-				}
+				},
+				gridLines: {color: "#171616", zeroLineColor: "#171616" }
 			}]
 		},
 		tooltips: {
