--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,35 @@
 </head>
 
 <body style="background-color:black;">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" />
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">CONNECTED HEALTH</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Dash Board</a></li>
+
+        <li><a href="#">Report</a></li>
+        <li><a href="#">Account</a></li>
+		<li><a href="#">About</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+
+
 
 
   <div class="text-center pt-5">
@@ -31,7 +58,7 @@
 <div class="container ">
 
   <div class="row pt-5">
-      <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 pt-5">
+     <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 pt-5">
 		<img class="img-responsive"  src= "{{ url_for('static',filename='img/heart.gif') }}" alt="this slowpoke moves" width="500" height="333">
     </div>
     <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 pt-5">
