--- a/templates/index.html
+++ b/templates/index.html
@@ -34,12 +34,12 @@
         <li class="active"><a href="#">Dash Board</a></li>
 
         <li><a href="#">Report</a></li>
-        <li><a href="#">Account</a></li>
-		<li><a href="#">About</a></li>
+        <li><a href="#">Health Record</a></li>
+		<li><a href="#">Health Analytics</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Account</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       </ul>
     </div>
   </div>
