--- a/templates/index.html
+++ b/templates/index.html
@@ -49,19 +49,22 @@
 
 
 
-  <div class="text-center pt-5">
+
+<div class="container ">
+
+  <div class="row pt-5">
+     <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 pt-5 ">
+	  <div class="text-center pt-5">
     <div class="col">
       <h1 style="color:#2962FF;">CONNECTED HEALTH</h1>
     </div>
    
   </div>
-<div class="container ">
+    <img class="img-responsive "  src= "{{ url_for('static',filename='img/heart.gif') }}" alt="this slowpoke moves" >
 
-  <div class="row pt-5">
-     <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 pt-5">
-		<img class="img-responsive"  src= "{{ url_for('static',filename='img/heart.gif') }}" alt="this slowpoke moves" width="500" height="333">
+		
     </div>
-    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 pt-5">
+    <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 pt-5">
 		<canvas id="lineChart"></canvas>
     </div>
 
@@ -138,6 +141,13 @@ var config = {
 				gridLines: {color: "#171616", zeroLineColor: "#171616" }
 			}],
 			yAxes: [{
+			
+			    ticks: {
+                max: 150,
+                min: 50,
+                stepSize: 20
+				},
+			
 				scaleLabel: {
 					display: true,
 					labelString: 'value'
