--- a/templates/index.html
+++ b/templates/index.html
@@ -50,21 +50,16 @@
 
 
 
-<div class="container ">
+<div class="container " style="margin-top:60px;">
 
   <div class="row pt-5">
-     <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 pt-5 ">
-	  <div class="text-center pt-5">
-    <div class="col">
-      <h1 style="color:#2962FF;">CONNECTED HEALTH</h1>
-    </div>
-   
-  </div>
+    <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 pt-5 " style="margin-top:60px;" >
+
     <img class="img-responsive "  src= "{{ url_for('static',filename='img/heart.gif') }}" alt="this slowpoke moves" >
 
 		
     </div>
-    <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 pt-5">
+    <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 pt-5" >
 		<canvas id="lineChart"></canvas>
     </div>
 
@@ -73,7 +68,9 @@
 </div>
 
 
-
+	<div style="color:#2962FF;text-align:center;padding:10px;margin-top:100px;">
+		<h3 >saving hearts ! <p style="font-size:48px">&#128151;</p></h3>
+	</div>
 <script>
 var chartColors = {
 	red: 'rgb(255, 99, 132)',
