--- a/templates/index.html
+++ b/templates/index.html
@@ -53,13 +53,13 @@
 <div class="container " style="margin-top:60px;">
 
   <div class="row pt-5">
-    <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 pt-5 " style="margin-top:60px; margin-bottom: 60px;" >
+    <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 pt-5 " style="margin-top:60px; margin-bottom: 60px;" >
 
     <img class="img-responsive "  src= "{{ url_for('static',filename='img/heart.gif') }}" alt="this slowpoke moves" >
 
 		
     </div>
-    <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8 pt-5" style="margin-bottom: 60px;" >
+    <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 pt-5" style="margin-bottom: 60px;" >
 		<canvas id="lineChart"></canvas>
     </div>
 
@@ -117,6 +117,11 @@ var config = {
 		}]
 	},
 	options: {
+		elements: {
+		point:{
+			radius: 0
+			}
+		},
 		responsive: true,
 		title: {
 			display: false,
