--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
+<style>
+table, th, td {
+  border: 1px solid gray;
+}
+table.center {
+  margin-left: auto; 
+  margin-right: auto;
+}
+</style>
 </head>
 
 <body style="background-color:black;">
@@ -27,13 +35,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">CONNECTED HEALTH</a>
+      <a class="navbar-brand" href="/">CONNECTED HEALTH</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Dash Board</a></li>
-
-        <li><a href="#">Report</a></li>
+        <li class="active"><a href="/">Dash Board</a></li>	  
+		<li><a href="/data">Report</a></li>
         <li><a href="#">Health Record</a></li>
 		<li><a href="#">Health Analytics</a></li>
       </ul>
@@ -45,158 +52,25 @@
   </div>
 </nav>
 
+<table class="center" style="background-color:black">
+  <tr style="background-color:black">
+    <th style="padding:10px"><p><font color="gray">Patient id </font></p> </th>
+	<th style="padding:10px"><p><font color="gray">Patient name</font></p>   </th>
+	<th style="padding:10px"><p><font color="gray">Patient  Report</font></p>   </th>
+  </tr>
+  <tr>
+    <td style="padding:10px"><p><font color="gray">01</font></p></td>	
+    <td style="padding:10px"><p><font color="gray">Manmath</font></p></td>	
+	<td style="padding:10px"><p><font color="gray"><a href= "/data">View live heart rate</a></font></p></td>
+  </tr>
+  <tr>
+    <td style="padding:10px"><p><font color="gray">02</font></p></td>	
+    <td style="padding:10px"><p><font color="gray">Dummy</font></p></td>	
+	<td style="padding:10px"><p><font color="gray">View live heart rate</font></p></td>
+  </tr>
+</table>
 
 
 
-
-
-<div class="container " style="margin-top:60px;">
-
-  <div class="row pt-5">
-    <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4 pt-5 " style="margin-top:60px; margin-bottom: 60px;" >
-
-    <img class="img-responsive "  src= "{{ url_for('static',filename='img/heart.gif') }}" alt="this slowpoke moves" >
-
-		
-    </div>
-    <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8 pt-5" style="margin-bottom: 60px;" >
-		<canvas id="lineChart"></canvas>
-    </div>
-
-
-  </div>
-</div>
-
-
-<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.10/firebase-database.js"></script> 
-<script id="mainscript">
-/*
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-	apiKey: "AIzaSyCRSKaKHTDbzXlpTfpehSNTugpNsctvRtU",
-	authDomain: "luminous-fire-9722.firebaseapp.com",
-	databaseURL: "https://luminous-fire-9722.firebaseio.com",
-	projectId: "luminous-fire-9722",
-	storageBucket: "luminous-fire-9722.appspot.com",
-	messagingSenderId: "232898681001",
-	appId: "1:232898681001:web:b1fe8c9821b4b2d2f971b8"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);	
-var data_value;
-var starCountRef = firebase.database().ref('Health');
-starCountRef.on('value', (snapshot) => {
-  data_value = snapshot.val().Heart_rate;
-  //document.write(data_value)
-});
-  
-*/
-var chartColors = {
-	red: 'rgb(255, 99, 132)',
-	orange: 'rgb(255, 159, 64)',
-	yellow: 'rgb(255, 205, 86)',
-	green: 'rgb(75, 192, 192)',
-	blue: 'rgb(54, 162, 235)',
-	purple: 'rgb(153, 102, 255)',
-	grey: 'rgb(201, 203, 207)'
-};
-
-
-const source = new EventSource("/chart-data");
-var data_value;
-source.onmessage = function (event) {
-	const data = JSON.parse(event.data);
-	data_value = data.value;
-}
-
-function randomScalingFactor() {
-	//document.write(data_value)
-	return data_value;//(Math.random() > 0.5 ? 1.0 : -1.0) * Math.round(Math.random() * 100);
-}
-function onRefresh(chart) {
-	chart.config.data.datasets.forEach(function(dataset) {
-		
-		dataset.data.push({
-			x: Date.now(),
-			y: randomScalingFactor()
-		});
-	});
-}
-
-var color = Chart.helpers.color;
-var config = {
-	type: 'line',
-	data: {
-		datasets: [ {
-			label: "Heart Rate",
-			backgroundColor: 'rgb(213,0,0)',
-			borderColor: 'rgb(213,0,0)',
-			
-			cubicInterpolationMode: 'default',
-			fill: false,
-
-
-			data: []
-		}]
-	},
-	options: {
-		elements: {
-		point:{
-			radius: 0
-			}
-		},
-		responsive: true,
-		title: {
-			display: false,
-			text: 'Heart Rate '
-		},
-		scales: {
-			xAxes: [{
-				type: 'realtime',
-				realtime: {
-					duration: 10000,
-					
-					refresh: 100,
-					delay: 2000,
-					onRefresh: onRefresh
-				},
-				gridLines: {color: "#171616", zeroLineColor: "#171616" }
-			}],
-			yAxes: [{
-			
-			    ticks: {
-                max: 1,
-                min: -0.5
-
-				},
-			
-				scaleLabel: {
-					display: true,
-					labelString: 'value'
-				},
-				gridLines: {color: "#171616", zeroLineColor: "#171616" }
-			}]
-		},
-		tooltips: {
-			mode: 'nearest',
-			intersect: false
-		},
-		hover: {
-			mode: 'nearest',
-			intersect: false
-		}
-	}
-};
-
-window.onload = function() {
-	var ctx = document.getElementById('lineChart').getContext('2d');
-	window.lineChart = new Chart(ctx, config);
-};
-
-
-
-</script>
 
 </body>
